<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/water">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="200dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:text="Solubility"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="bottom"
        android:layout_marginStart="25dp"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background">
        <EditText
            android:id="@+id/mph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ph_value"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:numeric="decimal"/>
        <EditText
            android:id="@+id/mmw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/molecular_weight"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/mrb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rotable_bonds"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Aromatic_Proportion"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:background="@color/white">

        <Button
            android:id="@+id/details"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/details" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_toEndOf="@+id/details"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <TextView
            android:id="@+id/finalresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details"
            android:layout_marginTop="10dp"
            android:gravity="center" />
    </RelativeLayout>

</LinearLayout>